Fixed the flex wrap of our pictures finally!

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,12 +95,29 @@
 
 .flex-container {
   display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  text-align: center;
 }
 
-.flex-child {
-  flex: 1;
-}  
+.div {
+  flex-shrink: 1;
+}
 
-.flex-child:first-child {
-  margin-right: 20px;
-} 
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body > div {
+  width: 100%;
+  height: 100%;
+  background: #6cecac;
+}
+
+body > div > div {
+  width: 100%;
+  margin-top: 20px;
+  background: white;
+}
